# dca-practicas

./: README.md
P1/: Readme.md  dca-ramas.tgz
P1/Estable/1.0.0/: HolaMundo.java  Readme.md  main.java
P1/Estable/2.0.0/: HolaMundo.java  Readme.md  main.java
P1/Master/0.1.0/: HolaMundo.java  Readme.md  main.java
P1/Master/0.2.0/: HolaMundo.java  Readme.md
P1/Master/1.1.0/: HolaMundo.java  Readme.md  main.java
P1/Master/1.2.0/: HolaMundo.java  Readme.md
P2/: Incidencia.java  Lbt.java  README.md  dca-lbt.tgz
P3/: dcapr3.deb
P4/: DCA Autotools-CM.rar  DCA-Autotools-CM.tgz  Documentación 48780988N.docx
P5/: dca-autotools-cm.tgz
P5/Autotools/noRecursivo/: configure.ac
P6/: instrucciones.txt  tporo.h
P6/Autotools/: Makefile  Makefile.am  Makefile.in  config.status
P6/Autotools/autom4te.cache/: requests  traces.0  traces.2  traces.3
P6/Autotools/include/: Makefile  Makefile.am
P6/Autotools/lib/: Makefile  Makefile.am  Makefile.in
P6/Autotools/test-boost/: Makefile  Makefile.am  tporo-test  tporo-test.cc
P6/Autotools/test-cxxtest/: Makefile  Makefile.am  Makefile.in  tporo-test  tporo-test.cc  tporo-test.h
P6/CMakeList/boost/: tporo.cpp
P6/dca-tests/: configure.ac
P6/dca-tests (copia)/: Makefile  Makefile.in  config.h  config.status  configure  configure.ac~  configure.scan
P6/dca-tests (copia)/autom4te.cache/: output.0  output.1  requests  traces.0  traces.2
P6/dca-tests (copia)/include/: Makefile  Makefile.in
P7/: camion.d  camion.vala  pelicula.d  pelicula.vala
P7/dca-prac8/D/: Calendario.d
P8/dca-i18/: README.txt  matricula
(+41 files in other folders)
